[gd_scene load_steps=2 format=3 uid="uid://c5h7lam2p4qr8"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_n6l2m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_n6l2m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "‚ñ∂Ô∏è Resume Game"

[node name="SettingsButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "‚öôÔ∏è Settings"

[node name="MainMenuButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "üè† Main Menu"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "‚ùå Quit Game"

[node name="Spacer2" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Instructions" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Press ESC or Resume to continue playing"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="MenuPanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
